--- a/index.html
+++ b/index.html
@@ -3,52 +3,53 @@
 <head>
   <meta name="referrer" content="strict-origin-when-cross-origin">
   <script src="https://www.youtube.com/iframe_api"></script>
+  <style>body{margin:0;height:100vh;}#player{width:100%;height:100%;}</style>
 </head>
 <body>
   <div id="player"></div>
   <script>
     var videos = [
-      {id: 'S69w0zMW-A0', start: 0, end: 85},
-      {id: 'MvofQDdXSR4', start: 15, end: 90}
+      {id: 'S69w0zMW-A0', start: 0, duration: 85},
+      {id: 'MvofQDdXSR4', start: 15, duration: 75}
     ];
     var current = 0;
     var player;
     var fadeTime = 2;
+    var startTime;
 
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('player', {
-        height: '390',
-        width: '640',
+        width: '100%',
+        height: '100%',
         videoId: videos[0].id,
-        playerVars: { 
-          start: videos[0].start, 
-          end: videos[0].end, 
-          autoplay: 1,
-          rel: 0,
-          modestbranding: 1
-        },
-        events: { 
-          onReady: onPlayerReady,
-          onStateChange: onStateChange 
-        }
+        playerVars: { autoplay: 1, rel: 0, modestbranding: 1 },
+        events: { onReady: onPlayerReady, onStateChange: onStateChange }
       });
     }
 
     function onPlayerReady(event) {
+      loadVideo(current);
       fadeVolume(0, 1, fadeTime);
     }
 
+    function loadVideo(idx) {
+      startTime = Date.now();
+      player.loadVideoById(videos[idx].id);
+      player.seekTo(videos[idx].start, true);
+    }
+
     function onStateChange(event) {
-      if (event.data == YT.PlayerState.ENDED || player.getCurrentTime() >= videos[current].end) {
+      if (event.data == YT.PlayerState.PLAYING) {
+        player.seekTo(videos[current].start, true);  // Гарантируем start
+      }
+      if (event.data == YT.PlayerState.ENDED || (Date.now() - startTime > videos[current].duration * 1000)) {
         fadeVolume(1, 0, fadeTime / 2, function() {
           current++;
           if (current < videos.length) {
-            player.loadVideoById(videos[current]);
-            player.seekTo(videos[current].start, true);
-            player.setPlaybackRate(1);
             setTimeout(function() {
+              loadVideo(current);
               fadeVolume(0, 1, fadeTime);
-            }, 500);
+            }, 1000);
           }
         });
       }
@@ -59,11 +60,11 @@
       var stepTime = duration * 1000 / steps;
       var step = (toVol - fromVol) / steps;
       var vol = fromVol;
-      var interval = setInterval(function () {
+      var int = setInterval(function() {
         vol += step;
-        player.setVolume(Math.max(0, Math.min(100, vol * 100)));
+        player.setVolume(Math.round(Math.max(0, Math.min(100, vol * 100))));
         if (Math.abs(vol - toVol) < Math.abs(step)) {
-          clearInterval(interval);
+          clearInterval(int);
           if (callback) callback();
         }
       }, stepTime);
